[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwoom-workspace"
version = "0.0.1"
description = "Kiwoom trading workspace scripts"
authors = [ {name = "auto", email = ""} ]
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
"aggregator_mock",
"aggregator_ws",
"connect_ws_test",
"kiwoom_rest_client_async",
"kiwoom_rest_client",
"kiwoom_rest_loader_mock",
"kiwoom_token_manager",
"market_watcher",
"mock_api_dryrun",
"mock_token_dryrun",
"mock_ws_server",
"order_manager_stub",
"position_manager",
"run_mock_trade",
"run_multiple_simulations",
"scanner_core_mock",
"scanner_core_ws",
"scanner_with_pm",
]
